--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_admin.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_admin.html
@@ -51,7 +51,7 @@
                 <li class="nav-item">
                     <a href="/admin/dashboard-admin" class="nav-link">
                         <i class="link-icon" data-feather="box"></i>
-                        <span class="link-title">Admin Profile</span>
+                        <span class="link-title">Dashboard admin</span>
                     </a>
                 </li>
 
@@ -72,7 +72,10 @@
                     <div class="collapse" id="events">
                         <ul class="nav sub-menu">
                             <li class="nav-item">
-                                <a href="/partner/change-password" class="nav-link">Change Password</a>
+                                <a href="/admin/admin-profile" class="nav-link">Admin Info</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/admin/change-password" class="nav-link">Change Password</a>
                             </li>
                             <li class="nav-item">
                                 <a href="addevents.html" class="nav-link">Payment</a>
@@ -165,18 +168,6 @@
                                     <a href="profile.html" class="text-body ms-0">
                                         <i class="me-2 icon-md" data-feather="user"></i>
                                         <span>Profile</span>
-                                    </a>
-                                </li>
-                                <li class="dropdown-item py-2">
-                                    <a class="text-body ms-0">
-                                        <i class="me-2 icon-md" data-feather="edit"></i>
-                                        <span>Edit Profile</span>
-                                    </a>
-                                </li>
-                                <li class="dropdown-item py-2">
-                                    <a class="text-body ms-0">
-                                        <i class="me-2 icon-md" data-feather="repeat"></i>
-                                        <span>Switch User</span>
                                     </a>
                                 </li>
                                 <li class="dropdown-item py-2" onclick="logout()">
