--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
@@ -51,6 +51,12 @@
                 <li class="nav-item">
                     <a href="/partner/dashboard-partner" class="nav-link">
                         <i class="link-icon" data-feather="box"></i>
+                        <span class="link-title">Dashboard</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/partner/hotel-profile" class="nav-link">
+                        <i class="link-icon" data-feather="home"></i>
                         <span class="link-title">Hotel Profile</span>
                     </a>
                 </li>
@@ -71,6 +77,9 @@
                     </a>
                     <div class="collapse" id="events">
                         <ul class="nav sub-menu">
+                            <li class="nav-item">
+                                <a href="/partner/account-info" class="nav-link">Account Info</a>
+                            </li>
                             <li class="nav-item">
                                 <a href="/partner/change-password" class="nav-link">Change Password</a>
                             </li>
@@ -172,18 +181,6 @@
                                     <a href="profile.html" class="text-body ms-0">
                                         <i class="me-2 icon-md" data-feather="user"></i>
                                         <span>Profile</span>
-                                    </a>
-                                </li>
-                                <li class="dropdown-item py-2">
-                                    <a class="text-body ms-0">
-                                        <i class="me-2 icon-md" data-feather="edit"></i>
-                                        <span>Edit Profile</span>
-                                    </a>
-                                </li>
-                                <li class="dropdown-item py-2">
-                                    <a class="text-body ms-0">
-                                        <i class="me-2 icon-md" data-feather="repeat"></i>
-                                        <span>Switch User</span>
                                     </a>
                                 </li>
                                 <li class="dropdown-item py-2" onclick="logout()">
