--- a/FINAL/travel-booking/src/main/resources/templates/user/index.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/index.html
@@ -187,12 +187,12 @@
                     <div class="col-lg-5 mb-4">
                         <div class="trend-item1">
                             <div class="trend-image position-relative rounded">
-                                <img src="assets/user/images/destination/destination1.jpg" alt="image">
+                                <img src="https://images.pexels.com/photos/14435439/pexels-photo-14435439.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
                                 <div
                                         class="trend-content d-flex align-items-center justify-content-between position-absolute bottom-0 p-4 w-100 z-index">
                                     <div class="trend-content-title">
-                                        <h5 class="mb-0"><a href="tour-grid.html" class="theme1">England</a></h5>
-                                        <h3 class="mb-0 white">London</h3>
+                                        <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Viet Nam</a></h5>
+                                        <h3 class="mb-0 white">Da Nang</h3>
                                     </div>
                                     <span class="white bg-theme p-1 px-2 rounded">15 Tours</span>
                                 </div>
@@ -205,13 +205,13 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
                                 <div class="trend-item1">
                                     <div class="trend-image position-relative rounded">
-                                        <img src="assets/user/images/destination/destination17.jpg" alt="image">
+                                        <img src="assets/user/images/destination/hue.jpg">
                                         <div
                                                 class="trend-content d-flex align-items-center justify-content-between position-absolute bottom-0 p-4 w-100 z-index">
                                             <div class="trend-content-title">
-                                                <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Italy</a>
+                                                <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Viet Nam</a>
                                                 </h5>
-                                                <h3 class="mb-0 white">Caspian Valley</h3>
+                                                <h3 class="mb-0 white">Hue</h3>
                                             </div>
                                             <span class="white bg-theme p-1 px-2 rounded">18 Tours</span>
                                         </div>
@@ -222,13 +222,13 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
                                 <div class="trend-item1">
                                     <div class="trend-image position-relative rounded">
-                                        <img src="assets/user/images/destination/destination14.jpg" alt="image">
+                                        <img src="assets/user/images/destination/ha-giang.jpg" alt="image">
                                         <div
                                                 class="trend-content d-flex align-items-center justify-content-between position-absolute bottom-0 p-4 w-100 z-index">
                                             <div class="trend-content-title">
-                                                <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Tokyo</a>
+                                                <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Viet Nam</a>
                                                 </h5>
-                                                <h3 class="mb-0 white">Japan</h3>
+                                                <h3 class="mb-0 white">Ha Giang</h3>
                                             </div>
                                             <span class="white bg-theme p-1 px-2 rounded">21 Tours</span>
                                         </div>
