--- a/FINAL/travel-booking/src/main/resources/templates/fragments/signup-partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/signup-partner.html
@@ -19,7 +19,7 @@
                 <div class="col-lg-6">
                   <h4 class="text-center border-b pb-2">Partner Register</h4>
 
-                  <form method="post" action="#" name="contactform1" id="contactform1">
+                  <form method="post" action="#" name="partner-signup-form" id="partner-signup-form">
                     <div class="form-group mb-4 input-row">
                       <input type="text" name="user_name" class="form-control partner-signup-email" id="signup-partner-name"
                              placeholder="Hotel Name" autocomplete="off">
@@ -40,17 +40,15 @@
                              id="signup-partner-confirm-password" placeholder="Re-enter Password" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
-                    <div class="form-group mb-2 d-flex privacy-confirm">
-                      <input type="checkbox" class="custom-control-input" id="exampleCheck1">
-                      <label class="custom-control-label mb-0 ms-1 lh-1" for="exampleCheck1">I
-                        have read and accept the <a href="/term_policy" style="color: #029e9d">Terms and Privacy</a> Policy?</label>
-                    </div>
+<!--                    <div class="form-group mb-2 d-flex privacy-confirm">-->
+<!--                      <input type="checkbox" id="partner-policy-box" class="custom-control-input">-->
+<!--                      <label class="custom-control-label mb-0 ms-1 lh-1" for="partner-policy-box">I-->
+<!--                        have read and accept the <a href="/term_policy" style="color: #029e9d">Terms and Privacy</a> Policy?</label>-->
+<!--                    </div>-->
                     <div class="input-row">
                       <button class="btn nir-btn w-100 login-btn mb-2" id="signup-partner-btn">Register</button>
                     </div>
 
-                    <p class="text-center">Already have an account? <a href="#"
-                                                                       class="theme">Login</a></p>
                   </form>
                 </div>
               </div>
