--- a/FINAL/travel-booking/src/main/resources/templates/management/admin/partner-management.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/admin/partner-management.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout/layout_dashboard_partner :: main-fragment(
+      th:replace="~{layout/layout_dashboard_admin :: main-fragment(
                                                 ~{:: title},
                                                 ~{:: #css-resources},
                                                 ~{:: #js-resources},
@@ -15,6 +15,14 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/css/bootstrap-grid.min.css"/>
+
+        <style>
+            .disabled {
+                opacity: 0.8;
+                pointer-events: none;
+                cursor: not-allowed;
+            }
+        </style>
     </th:block>
 </head>
 
@@ -24,36 +32,32 @@
     <div class="page-content">
         <nav class="page-breadcrumb d-flex align-items-center justify-content-between">
             <ol class="breadcrumb mb-0">
-                <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Room Management</li>
+                <li class="breadcrumb-item"><a href="admin/dashboard-admin">Dashboard</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Hotel list</li>
             </ol>
-            <a href="/partner/add-room" class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add
-                room</a>
+            <a href="/admin/add-hotel" class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add
+                hotel</a>
         </nav>
         <div class="search-box p-4 bg-white rounded mb-3 box-shadow">
             <div class="col-lg-3 pb-4">
-                <h5>Room Management Lists</h5>
+                <h5>Hotel Lists</h5>
             </div>
             <form class="forms-sample">
                 <div class="row align-items-center">
 
                     <div class="col-lg-4 col-md-4">
-                        <input type="text" placeholder="Search by room name" class="form-control" id="searchName">
+                        <input type="text" placeholder="Search by hotel name" class="form-control" id="searchName">
                     </div>
                     <div class="col-lg-4 col-md-4">
-                        <input type="text" placeholder="Search by capacity" class="form-control" id="searchCapacity">
+                        <input type="text" placeholder="Search by email" class="form-control" id="searchEmail">
                     </div>
-                    <div class="col-lg-3 col-md-4">
-                        <select class="form-select" id="searchRoomStatus">
-                            <option th:each="status : ${roomStatusList}" th:value="${status}"
-                                    th:text="${status.getName}"
-                                    class="text-body"></option>
-                        </select>
+                    <div class="col-lg-4 col-md-4">
+                        <input type="text" placeholder="Search by location" class="form-control" id="searchAddress">
                     </div>
                 </div>
             </form>
             <div class="mt-3">
-                <button type="submit" class="btn btn-primary px-3 py-2" id="search-room-btn"><i class="link-icon"
+                <button type="submit" class="btn btn-primary px-3 py-2" id="search-hotel-btn"><i class="link-icon"
                                                                                                 data-feather="search"></i>
                     Search
                 </button>
@@ -72,31 +76,17 @@
                                     <th>Email</th>
                                     <th>Phone</th>
                                     <th>Address</th>
-                                    <th>Status</th>
                                     <th class="text-center">Action</th>
                                 </tr>
                                 </thead>
 
                                 <tbody>
-                                <tr th:each="room: ${roomList.data}">
-                                    <td th:text="${room.id}"/>
-                                    <td th:text="${room.name}"/>
-                                    <td>
-                                        <span th:each="facility, iterStat : ${room.facilities}">
-                                            <span th:text="${facility.name}"></span>
-                                            <span th:if="${!iterStat.last}">, </span>
-                                        </span>
-                                    </td>
-
-                                    <td>
-                                        <script th:inline="javascript">
-                                            var price = [[${room.price}]];
-                                            var formattedPrice = new Intl.NumberFormat('vi-VN').format(price);
-                                            document.write(formattedPrice);
-                                        </script>
-                                    </td>
-                                    <td th:text="${room.capacity}"/>
-                                    <td th:text="${room.roomStatus.name}"/>
+                                <tr th:each="hotel: ${hotelList.data}">
+                                    <td th:text="${hotel.id}"/>
+                                    <td th:text="${hotel.name}"/>
+                                    <td th:text="${hotel.email}"/>
+                                    <td th:text="${hotel.phone}"/>
+                                    <td th:text="${hotel.address}"/>
 
                                     <td class="text-center">
                                         <ul class="d-flex list-unstyled mb-0 justify-content-center">
@@ -106,16 +96,16 @@
                                                 </a>
                                             </li>
                                             <li class="me-2">
-                                                <a th:href="@{'/partner/rooms/' + ${room.id}}"
+                                                <a th:href="@{'/partner/rooms/' + ${hotel.id}}"
                                                    target="_blank">
                                                     <i class="link-icon" data-feather="edit"></i>
                                                 </a>
                                             </li>
                                             <li>
-                                                <input type="hidden" id="roomId" th:value="${room.id}">
+                                                <input type="hidden" id="roomId" th:value="${hotel.id}">
                                                 <a href="#" id="delete-room-btn" data-bs-toggle="modal"
                                                    data-bs-target="#confirmDelete">
-                                                    <i class="link-icon" data-feather="delete"></i>
+                                                    <i class="link-icon" data-feather="lock"></i>
                                                 </a>
                                             </li>
                                         </ul>
@@ -129,18 +119,28 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="dataTables_paginate">
-                <ul class="pagination">
-                    <li class="paginate_button page-item">
-                        <a href="#" class="page-link">Previous</a>
-                    </li>
-                    <li class="paginate_button page-item active"><a href="#" class="page-link">1</a></li>
-                    <li class="paginate_button page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="paginate_button page-item"><a href="#" class="page-link">3</a></li>
-                    <li class="paginate_button page-item"><a href="#" class="page-link">Next</a></li>
-                </ul>
-            </div>
+        <div aria-label="Page navigation" class="d-flex justify-content-center">
+            <ul class="pagination">
+                <!-- Previous button -->
+                <li class="page-item prev-button" th:classappend="${currentPage == 1 ? 'disabled' : ''}">
+                    <a class="page-link"
+                       th:href="@{/admin/partner-management?pageIndex={page}(page=${currentPage - 1})}">Previous</a>
+                </li>
+
+                <!-- Page numbers -->
+                <li class="page-item" th:each="page : ${#numbers.sequence(1, hotelList.getPageNumber)}"
+                    th:classappend="${currentPage == page ? 'active' : ''}">
+                    <a class="page-link" th:href="@{/admin/partner-management(pageIndex=${page})}"><span
+                            th:text="${page}"></span></a>
+                </li>
+
+                <!-- Next button -->
+                <li class="page-item" id="nextButton"
+                    th:classappend="${currentPage >= hotelList.getPageNumber ? 'disabled' : ''}">
+                    <a class="page-link"
+                       th:href="@{/admin/partner-management?pageIndex={page}(page=${currentPage + 1})}">Next</a>
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -149,6 +149,8 @@
 </main>
 
 <th:block id="js-resources">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(document).ready(function () {
             $('#confirmDelete').on('show.bs.modal', function (event) {
@@ -177,11 +179,39 @@
                 });
             });
 
+            //Lấy lại thông tin hotel
+            let userInfo = JSON.parse(localStorage.getItem("userInfo"))
+            getHotelByEmail();
+
+            function getHotelByEmail() {
+                const jwt = localStorage.getItem('jwt');
+                let emailHotel = userInfo.username
+                let hotelId = null;
+                if (jwt) {
+                    $.ajax({
+                        url: `/api/v1/partner/hotel?email=${encodeURIComponent(emailHotel)}`,
+                        type: 'GET',
+                        headers: {
+                            'Authorization': 'Bearer ' + jwt
+                        },
+                        success: function (response) {
+                            // Xử lý dữ liệu khách sạn nhận được từ response
+                            console.log(response);
+                            hotelId = response.id;
+                        },
+                        error: function (xhr, status, error) {
+                            console.error(error);
+                        }
+                    });
+                }
+            }
+
             $('#search-room-btn').on("click", function (event) {
                 event.preventDefault();
                 let url = `/partner/room-management`
                 const name = $('#searchName').val();
                 const capacity = $('#searchCapacity').val();
+                const id = $('#searchId').val();
 
                 if (name !== '') {
                     url += `?name=${name}`;
@@ -189,16 +219,21 @@
                 if (capacity !== '') {
                     url += `${name ? '&' : '?'}capacity=${capacity}`
                 }
+                if (id !== '') {
+                    url += `${name || capacity ? '&' : '?'}id=${id}`
+                }
 
                 window.location.href = url;
 
             });
             keepValue();
+
             function keepValue() {
                 // Giữ lại giá trị tìm kiếm trên thanh search khi trang tải lần đầu
                 const params = new URLSearchParams(window.location.search);
                 const nameParam = params.get('name');
                 const capacityParam = params.get('capacity');
+                const idParam = params.get('id')
 
                 if (nameParam) {
                     $('#searchName').val(nameParam);
@@ -206,6 +241,9 @@
 
                 if (capacityParam) {
                     $('#searchCapacity').val(capacityParam);
+                }
+                if (idParam) {
+                    $('#searchId').val(idParam);
                 }
             }
         });
