--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/add-room.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/add-room.html
@@ -30,6 +30,58 @@
                 border-radius: 10px;
             }
 
+            .upload-box {
+                position: relative;
+                border: 2px dashed #ccc;
+                padding: 30px;
+                text-align: center;
+                cursor: pointer;
+            }
+
+            .upload-box p {
+                margin: 0;
+                font-size: 16px;
+                color: #ccc; /* Màu xám cho chữ "upload" */
+            }
+
+            .upload-icon {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 24px;
+            }
+
+            .preview-container {
+                display: flex;
+                flex-wrap: wrap;
+            }
+
+            .preview-image-container {
+                position: relative;
+                margin: 5px;
+            }
+
+            .preview-image {
+                max-width: 100px;
+                max-height: 100px;
+            }
+
+            .delete-button {
+                position: absolute;
+                top: -10px;
+                right: -10px;
+                background-color: gray;
+                color: #fff;
+                width: 24px;
+                height: 24px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 12px;
+                cursor: pointer;
+                border-radius: 50%; /* Đặt border-radius là 50% để tạo hình tròn */
+            }
         </style>
     </th:block>
 
@@ -46,7 +98,8 @@
                 <li class="breadcrumb-item"><a href="popup-ads.html">Room</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Add Room</li>
             </ol>
-            <a href="/partner/room-management" class="btn btn-primary"><i class="link-icon" data-feather="arrow-left"></i> Back To
+            <a href="/partner/room-management" class="btn btn-primary"><i class="link-icon"
+                                                                          data-feather="arrow-left"></i> Back To
                 List</a>
         </nav>
         <div class="row">
@@ -56,10 +109,26 @@
                         <h4 class="mb-4">Room Information</h4>
                         <form class="forms-sample" id="uploadForm">
                             <div class="row">
-                                <div class="col-lg-12 mb-5">
+                                <!--                                <div class="col-lg-12 mb-5">-->
+                                <!--                                    <label for="roomImages" class="form-label">Room Photos</label>-->
+                                <!--                                    <input class="form-control multi file-upload-input with-preview" type="file" name="files[]"-->
+                                <!--                                           id="roomImages" multiple maxlength="3">-->
+                                <!--                                </div>-->
+
+                                <div class="col-lg-8 mb-4">
                                     <label for="roomImages" class="form-label">Room Photos</label>
-                                    <input class="form-control" type="file" id="roomImages" multiple>
+                                    <div id="uploadBox" class="upload-box">
+                                        <i class="me-2 icon-md" data-feather="upload"></i>
+                                        <p>Click or drag images here to upload</p>
+                                    </div>
+                                    <input class="form-control multi file-upload-input with-preview" type="file" name="files[]"
+                                           id="roomImages" multiple maxlength="3" style="display: none;">
                                 </div>
+                                <div class="col-lg-12 mb-5">
+                                    <div class="preview-container" id="previewContainer"></div>
+                                </div>
+
+
                                 <div class="col-lg-4 mb-5">
                                     <label for="roomName" class="form-label">Room Name *</label>
                                     <input type="text" class="form-control" id="roomName" autocomplete="off"
@@ -119,7 +188,8 @@
 
                                 <div class="row bed-row mt-3">
                                     <div class="col-lg-4">
-                                        <select class="form-control form-select bed-type" name="bedType" data-selected-bed-type="">
+                                        <select class="form-control form-select bed-type" name="bedType"
+                                                data-selected-bed-type="">
                                             <option value="" disabled selected>Chọn loại giường</option>
                                             <option th:each="bedType : ${bedTypes}" th:value="${bedType}"
                                                     th:text="${bedType.getName}"
@@ -128,7 +198,8 @@
                                         </select>
                                     </div>
                                     <div class="col-lg-4">
-                                        <input type="number" class="form-control bed-quantity" placeholder="Nhập số lượng" name="bedQuantity">
+                                        <input type="number" class="form-control bed-quantity"
+                                               placeholder="Nhập số lượng" name="bedQuantity">
                                     </div>
                                     <div class="col-lg-4">
                                         <button type="button" class="btn btn-danger btn-remove-bed">Xóa</button>
@@ -161,6 +232,61 @@
 </main>
 
 <th:block id="js-resources">
+
+    //Hiển thị phần hình ảnh khi upload
+    <script>
+        const uploadBox = document.getElementById('uploadBox');
+        const fileInput = document.getElementById('roomImages');
+        const previewContainer = document.getElementById('previewContainer');
+
+        uploadBox.addEventListener('click', () => {
+            fileInput.click();
+        });
+
+        fileInput.addEventListener('change', handleImagePreview);
+
+        function handleImagePreview(event) {
+            const files = event.target.files;
+            const minFiles = 1; // Số lượng tối thiểu
+            const maxFiles = 5; // Số lượng tối đa
+
+            if (files.length < minFiles || files.length > maxFiles) {
+                toastr.error(`Please select at least ${minFiles} and maximum ${maxFiles} images.`);
+                fileInput.value = '';
+                return;
+            }
+
+            // Xóa hết các hình ảnh preview cũ
+            previewContainer.innerHTML = '';
+
+            // Hiển thị hình ảnh preview
+            for (let i = 0; i < files.length; i++) {
+                const file = files[i];
+                const imageBlob = new Blob([file], {type: file.type});
+                const imageUrl = URL.createObjectURL(imageBlob);
+
+                const imagePreviewContainer = document.createElement('div');
+                imagePreviewContainer.classList.add('preview-image-container');
+                const imagePreview = document.createElement('img');
+                imagePreview.classList.add('preview-image');
+                imagePreview.src = imageUrl;
+                imagePreviewContainer.appendChild(imagePreview);
+
+                // Thêm nút xóa hình ảnh
+                const deleteButton = document.createElement('span');
+                deleteButton.classList.add('delete-button');
+                deleteButton.innerText = 'X';
+                deleteButton.addEventListener('click', () => {
+                    imagePreviewContainer.remove();
+                });
+                imagePreviewContainer.appendChild(deleteButton);
+
+                previewContainer.appendChild(imagePreviewContainer);
+            }
+        }
+    </script>
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
@@ -304,7 +430,7 @@
                         digits: "Please enter a valid whole number.",
                         min: "Number of beds must be at least 1."
                     },
-                    bedType:{
+                    bedType: {
                         required: "Please choose bedType"
                     }
                 },
@@ -500,7 +626,6 @@
     </script>
     <!--    Tạo phòng-->
     <!--    <script src="/assets/admin/js/create-edit-room.js"></script>-->
-
 
 
 </th:block>
