--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/room-management.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/room-management.html
@@ -15,6 +15,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/css/bootstrap-grid.min.css"/>
+        <style>
+            .disabled {
+                opacity: 0.8;
+                pointer-events: none;
+                cursor: not-allowed;
+            }
+        </style>
     </th:block>
 </head>
 
@@ -24,7 +31,7 @@
     <div class="page-content">
         <nav class="page-breadcrumb d-flex align-items-center justify-content-between">
             <ol class="breadcrumb mb-0">
-                <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/partner/dashboard-partner">Dashboard</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Room Management</li>
             </ol>
             <a href="/partner/add-room" class="btn btn-primary"><i class="link-icon" data-feather="plus"></i> Add
@@ -36,19 +43,14 @@
             </div>
             <form class="forms-sample">
                 <div class="row align-items-center">
-
+                    <div class="col-lg-4 col-md-4">
+                        <input type="text" placeholder="Search by ID" class="form-control" id="searchId">
+                    </div>
                     <div class="col-lg-4 col-md-4">
                         <input type="text" placeholder="Search by room name" class="form-control" id="searchName">
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <input type="text" placeholder="Search by capacity" class="form-control" id="searchCapacity">
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <select class="form-select" id="searchRoomStatus">
-                            <option th:each="status : ${roomStatusList}" th:value="${status}"
-                                    th:text="${status.getName}"
-                                    class="text-body"></option>
-                        </select>
                     </div>
                 </div>
             </form>
@@ -72,8 +74,9 @@
                                     <th>Facility</th>
                                     <th>Price</th>
                                     <th>Capacity</th>
-                                    <th>Status</th>
-                                    <th class="text-center">Published</th>
+                                    <th class="text-center">Status</th>
+                                    <th class="text-center">Tot. Rooms</th>
+                                    <th class="text-center">Avail. room</th>
                                     <th class="text-center">Action</th>
                                 </tr>
                                 </thead>
@@ -96,14 +99,10 @@
                                             document.write(formattedPrice);
                                         </script>
                                     </td>
-                                    <td th:text="${room.capacity}"/>
+                                    <td class="text-center" th:text="${room.capacity}"/>
                                     <td th:text="${room.roomStatus.name}"/>
-
-                                    <td class="text-center">
-                                        <span class="form-check form-switch"><input type="checkbox"
-                                                                                    class="form-check-input"
-                                                                                    id="formSwitch1"></span>
-                                    </td>
+                                    <td class="text-center">?</td>
+                                    <td class="text-center">?</td>
                                     <td class="text-center">
                                         <ul class="d-flex list-unstyled mb-0 justify-content-center">
                                             <li class="me-2">
@@ -136,61 +135,39 @@
             </div>
         </div>
 
-        <nav aria-label="Page navigation" class="d-flex justify-content-center">
+        <div aria-label="Page navigation" class="d-flex justify-content-center">
             <ul class="pagination">
-                <li class="page-item" id="previousButton" th:classappend="${currentPage <= 1 ? 'disabled' : ''}">
-                    <a class="page-link" th:href="@{/partner/room-management?pageIndex={page}(page=${currentPage - 1})}">Previous</a>
+                <!-- Previous button -->
+                <li class="page-item prev-button" th:classappend="${currentPage == 1 ? 'disabled' : ''}">
+                    <a class="page-link"
+                       th:href="@{/partner/room-management?pageIndex={page}(page=${currentPage - 1})}">Previous</a>
                 </li>
+
+                <!-- Page numbers -->
                 <li class="page-item" th:each="page : ${#numbers.sequence(1, roomList.getPageNumber)}"
                     th:classappend="${currentPage == page ? 'active' : ''}">
-                    <a class="page-link" th:href="@{/partner/room-management(pageIndex=${page})}"><span th:text="${page}"></span></a>
+                    <a class="page-link" th:href="@{/partner/room-management(pageIndex=${page})}"><span
+                            th:text="${page}"></span></a>
                 </li>
-                <li class="page-item" id="nextButton" th:classappend="${currentPage >= roomList.getPageNumber ? 'disabled' : ''}">
-                    <a class="page-link" th:href="@{/partner/room-management?pageIndex={page}(page=${currentPage + 1})}">Next</a>
+
+                <!-- Next button -->
+                <li class="page-item" id="nextButton"
+                    th:classappend="${currentPage >= roomList.getPageNumber ? 'disabled' : ''}">
+                    <a class="page-link"
+                       th:href="@{/partner/room-management?pageIndex={page}(page=${currentPage + 1})}">Next</a>
                 </li>
             </ul>
-        </nav>
+        </div>
 
-        <!--        <th:block th:replace="fragments/pagination::pagination(${currentPage},${roomList})"></th:block>-->
     </div>
-
 
     <!-- view MODAL -->
     <div th:replace="~{fragments/view_room:: view-room-modal}"></div>
 </main>
 
 <th:block id="js-resources">
-    <script>
-        $(document).ready(function() {
-            // Lấy các thẻ li chứa nút Previous và Next bằng ID
-            const previousButton = document.getElementById('previousButton');
-            const nextButton = document.getElementById('nextButton');
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-            // Lấy giá trị currentPage và roomList.pageNumber từ Thymeleaf và chuyển thành số nguyên
-            const currentPage = parseInt([[${currentPage}]]);
-            console.log(currentPage <= 1)
-
-            const pageNumber = parseInt([[${roomList.pageNumber}]]);
-
-            // Kiểm tra và cập nhật trạng thái của nút Previous và Next
-            function updateButtonState() {
-                if (currentPage <= 1) {
-                    previousButton.classList.add('disabled');
-                } else {
-                    previousButton.classList.remove('disabled');
-                }
-
-                if (currentPage >= pageNumber) {
-                    nextButton.classList.add('disabled');
-                } else {
-                    nextButton.classList.remove('disabled');
-                }
-            }
-
-            // Gọi hàm cập nhật trạng thái khi trang được tải
-            updateButtonState();
-        })
-    </script>
     <script>
         $(document).ready(function () {
             $('#confirmDelete').on('show.bs.modal', function (event) {
@@ -219,11 +196,39 @@
                 });
             });
 
+            //Lấy lại thông tin hotel
+            let userInfo = JSON.parse(localStorage.getItem("userInfo"))
+            getHotelByEmail();
+
+            function getHotelByEmail() {
+                const jwt = localStorage.getItem('jwt');
+                let emailHotel = userInfo.username
+                let hotelId = null;
+                if (jwt) {
+                    $.ajax({
+                        url: `/api/v1/partner/hotel?email=${encodeURIComponent(emailHotel)}`,
+                        type: 'GET',
+                        headers: {
+                            'Authorization': 'Bearer ' + jwt
+                        },
+                        success: function (response) {
+                            // Xử lý dữ liệu khách sạn nhận được từ response
+                            console.log(response);
+                            hotelId = response.id;
+                        },
+                        error: function (xhr, status, error) {
+                            console.error(error);
+                        }
+                    });
+                }
+            }
+
             $('#search-room-btn').on("click", function (event) {
                 event.preventDefault();
                 let url = `/partner/room-management`
                 const name = $('#searchName').val();
                 const capacity = $('#searchCapacity').val();
+                const id = $('#searchId').val();
 
                 if (name !== '') {
                     url += `?name=${name}`;
@@ -231,16 +236,21 @@
                 if (capacity !== '') {
                     url += `${name ? '&' : '?'}capacity=${capacity}`
                 }
+                if (id !== '') {
+                    url += `${name || capacity ? '&' : '?'}id=${id}`
+                }
 
                 window.location.href = url;
 
             });
             keepValue();
+
             function keepValue() {
                 // Giữ lại giá trị tìm kiếm trên thanh search khi trang tải lần đầu
                 const params = new URLSearchParams(window.location.search);
                 const nameParam = params.get('name');
                 const capacityParam = params.get('capacity');
+                const idParam = params.get('id')
 
                 if (nameParam) {
                     $('#searchName').val(nameParam);
@@ -248,6 +258,9 @@
 
                 if (capacityParam) {
                     $('#searchCapacity').val(capacityParam);
+                }
+                if (idParam) {
+                    $('#searchId').val(idParam);
                 }
             }
         });
